--- a/agendalive/src/app/views/home/home.component.html
+++ b/agendalive/src/app/views/home/home.component.html
@@ -1,7 +1,11 @@
-<mat-toolbar >
-   <mat-toolbar-row style="font-size: 1.5rem; height: 80px;" >
+<mat-toolbar>
+  <mat-toolbar-row style="font-size: 1.5rem; height: 80px;">
     <span>Agenda Live <mat-icon>date_range</mat-icon> </span>
     <span class="example-spacer"></span>
-    <button mat-raised-button ><mat-icon>add</mat-icon> Live</button>
+    <button mat-raised-button>
+      <mat-icon>add</mat-icon> Live
+    </button>
   </mat-toolbar-row>
 </mat-toolbar>
+
+<app-live-list></app-live-list>
